--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
         <jstl.version>1.2</jstl.version>
         <junit.version>4.10</junit.version>
         <logback.version>1.1.3</logback.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -182,7 +182,7 @@
  		    <plugin>
  		        <groupId>org.jacoco</groupId>
  		        <artifactId>jacoco-maven-plugin</artifactId>
- 		        <version>0.7.2.201409121644</version>
+ 		        <version>0.8.4</version>
  		        <executions>
  		            <execution>
  		                <id>jacoco-initialize</id>
